--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import { ReactFlowCanvas } from '@/components/ReactFlow'
 import { TitleName } from '@/components/TitleName'
 import type { FlowLikesDTO } from '@/db/dto/reactflow.dto'
 import Layout from '@/layouts/Layout.astro'
+import { isValidApiKey } from '@/pages/_services/admin.service'
 import { GET as getFlowSnapshot } from '@/pages/api/reactflow'
 import { GET as getFlowLikes } from '@/pages/api/reactflow/node/likes'
 import type { ReactFlowJsonObject } from 'reactflow'
@@ -12,9 +13,11 @@ const flow: ReactFlowJsonObject = snapshotRes.ok ? await snapshotRes.json() : {}
 
 const flowLikesRes = await getFlowLikes(Astro)
 const flowLikes: FlowLikesDTO = await flowLikesRes.json()
+
+const allowEditing = isValidApiKey(Astro.cookies)
 ---
 
 <Layout title='Board'>
-	<ReactFlowCanvas client:load flowValue={flow} flowLikes={flowLikes} allowEditing />
+	<ReactFlowCanvas client:load flowValue={flow} flowLikes={flowLikes} allowEditing={allowEditing} />
 	<TitleName client:load />
 </Layout>
