feat: add theme toggle and logic

--- a/src/components/NoiseBackground.astro
+++ b/src/components/NoiseBackground.astro
@@ -1,4 +1,4 @@
-<div class='fixed inset-0 m-auto bg-black/10 opacity-25'>
+<div class='fixed inset-0 m-auto bg-background/10 opacity-25'>
 	<svg fill='none' viewBox='0 0 24 24' stroke='currentColor' aria-hidden='true'></svg>
 </div>
 
