--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,14 @@
 ---
+import { ThemeToggler } from '@/components/ThemeToggler'
+import { getTheme } from '@/pages/_services/theme.service'
+import '@fontsource-variable/jost'
 import { ViewTransitions } from 'astro:transitions'
 
-import '@fontsource-variable/jost'
-
 const { title } = Astro.props
+const theme = getTheme(Astro.cookies)
 ---
 
-<html lang='en'>
+<html lang='en' class={theme}>
 	<head>
 		<meta charset='utf-8' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
@@ -15,11 +17,17 @@ const { title } = Astro.props
 		<title>{title}</title>
 		<ViewTransitions />
 	</head>
-	<body class='overflow-x-hidden bg-gray-800'>
-		<div class='mx-auto min-h-screen w-full'>
-			<!-- <NoiseBackground /> -->
+	<body
+		class='mx-auto min-h-screen w-full overflow-x-hidden bg-background text-foreground transition-colors duration-500'
+	>
+		<main transition:animate='fade'>
 			<slot />
-		</div>
+		</main>
+
+		<span class='absolute left-0 top-0 m-4'>
+			<ThemeToggler client:only='react' initialTheme={theme} />
+		</span>
+
 		<style is:global>
 			@font-face {
 				font-family: 'Phosphene';
@@ -30,6 +38,11 @@ const { title } = Astro.props
 
 			html {
 				font-family: 'Jost Variable', system-ui, sans-serif;
+			}
+
+			::view-transition-new(root),
+			::view-transition-old(root) {
+				animation: none;
 			}
 		</style>
 	</body>
