feat: add theme swap logic, hero section and multiple flos documents

--- a/src/components/LightsBackground.astro
+++ b/src/components/LightsBackground.astro
@@ -1,4 +1,7 @@
-<div class='fixed size-full -scale-100 bg-no-repeat opacity-10 blur-sm md:opacity-10'></div>
+<div
+	class='mix-blend-screen blur-sm fixed size-full -scale-100 bg-no-repeat opacity-10 md:opacity-100'
+>
+</div>
 
 <style>
 	div {
