--- a/src/pages/job/[id].astro
+++ b/src/pages/job/[id].astro
@@ -2,17 +2,16 @@
 import { JobNodeContent } from '@/components/ReactFlow/Nodes/JobNode'
 import { TitleName } from '@/components/TitleName'
 import Layout from '@/layouts/Layout.astro'
+import { GET } from '@/pages/api/reactflow/node/[id]'
 import type { Node } from 'reactflow'
-import { GET } from '../api/reactflow/node/[id]'
 
 const nodeRes = await GET(Astro)
+if (!nodeRes.ok) return new Response('Not Found', { status: 404 })
 const node: Node = await nodeRes.json()
-if (!node?.data) return new Response('Not Found', { status: 404 })
 ---
 
 <Layout>
 	<TitleName client:load />
-
 	<div class='p-12'>
 		<JobNodeContent {...node.data} nodeId={node.id} />
 	</div>
