--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { ThemeToggler } from '@/components/ThemeToggler'
+import { ThemeToggle } from '@/components/ThemeToggler'
 import { getTheme } from '@/pages/_services/theme.service'
 import '@fontsource-variable/jost'
 import { ViewTransitions } from 'astro:transitions'
@@ -9,41 +9,50 @@ const theme = getTheme(Astro.cookies)
 ---
 
 <html lang='en' class={theme}>
-	<head>
-		<meta charset='utf-8' />
-		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-		<meta name='viewport' content='width=device-width' />
-		<meta name='generator' content={Astro.generator} />
-		<title>{title}</title>
-		<ViewTransitions />
-	</head>
-	<body
-		class='mx-auto min-h-screen w-full overflow-x-hidden bg-background text-foreground transition-colors duration-500'
-	>
-		<main transition:animate='fade'>
-			<slot />
-		</main>
+  <head>
+    <meta charset='utf-8' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='viewport' content='width=device-width' />
+    <meta name='generator' content={Astro.generator} />
+    <title>{title}</title>
+    <ViewTransitions />
+  </head>
+  <body
+    class='min-h-dvh w-full overflow-x-hidden bg-foreground-50 text-foreground transition-colors'
+  >
+    <slot />
 
-		<span class='absolute left-0 top-0 m-4'>
-			<ThemeToggler client:only='react' initialTheme={theme} />
-		</span>
+    <span class='absolute left-0 top-0 flex items-start gap-2 p-10'>
+      <ThemeToggle client:only='react' initialTheme={theme} />
+    </span>
 
-		<style is:global>
-			@font-face {
-				font-family: 'Phosphene';
-				font-style: normal;
-				font-weight: normal;
-				src: url('/fonts/PhospheneFont-Regular.ttf') format('truetype');
-			}
+    <style is:global>
+      @font-face {
+        font-family: 'Phosphene';
+        font-style: normal;
+        font-weight: normal;
+        src: url('/fonts/PhospheneFont-Regular.ttf') format('truetype');
+      }
 
-			html {
-				font-family: 'Jost Variable', system-ui, sans-serif;
-			}
+      @font-face {
+        font-family: 'Mogi';
+        font-style: normal;
+        font-weight: normal;
+        src: url('/fonts/LCMogi-VF.ttf') format('truetype');
+      }
 
-			::view-transition-new(root),
-			::view-transition-old(root) {
-				animation: none;
-			}
-		</style>
-	</body>
+      html {
+        font-family: 'Jost Variable', system-ui, sans-serif;
+      }
+
+      mark {
+        @apply bg-secondary-100 text-primary-900;
+      }
+
+      ::view-transition-new(root),
+      ::view-transition-old(root) {
+        animation: none;
+      }
+    </style>
+  </body>
 </html>
