--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,14 @@
 ---
-import { ReactFlowCanvas } from '@/components/ReactFlow'
-import { TitleName } from '@/components/TitleName'
-import type { FlowLikesDTO } from '@/db/dto/reactflow.dto'
+import { Hero } from '@/components/Hero'
+import { SocialLinks } from '@/components/SocialLinks'
 import Layout from '@/layouts/Layout.astro'
-import { isValidApiKey } from '@/pages/_services/admin.service'
-import { GET as getFlowSnapshot } from '@/pages/api/reactflow'
-import { GET as getFlowLikes } from '@/pages/api/reactflow/likes'
-import type { ReactFlowJsonObject } from 'reactflow'
-
-const snapshotRes = await getFlowSnapshot(Astro)
-const flow: ReactFlowJsonObject = snapshotRes.ok ? await snapshotRes.json() : {}
-
-const flowLikesRes = await getFlowLikes(Astro)
-const flowLikes: FlowLikesDTO = await flowLikesRes.json()
-
-const allowEditing = isValidApiKey(Astro.cookies)
 ---
 
-<Layout title='Board'>
-	<ReactFlowCanvas client:load flowValue={flow} flowLikes={flowLikes} allowEditing={allowEditing} />
-	<TitleName client:load />
+<Layout>
+  <main class='flex h-dvh justify-center pt-32 bg-dot-black/20 dark:bg-dot-white/20 lg:pt-40'>
+    <Hero client:only='react' />
+    <aside class='absolute right-0 top-0 p-10'>
+      <SocialLinks client:load />
+    </aside>
+  </main>
 </Layout>
