--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
+import { Footer } from '@/components/Footer'
 import { Hero } from '@/components/Hero'
+import ReactFlowLoader from '@/components/ReactFlowLoader.astro'
 import { SocialLinks } from '@/components/SocialLinks'
 import Layout from '@/layouts/Layout.astro'
 
@@ -8,10 +10,30 @@ const initQuery = searchParams.get('q') ?? ''
 ---
 
 <Layout title='Iván Ruiz'>
-  <main class='flex h-dvh justify-center pt-32 bg-dot-black/20 dark:bg-dot-white/20 lg:pt-40'>
+  <main
+    class='flex min-h-dvh flex-col items-center pt-32 bg-dot-black/20 dark:bg-dot-white/20 lg:pt-40'
+  >
     <Hero client:only='react' initQuery={initQuery} />
     <aside class='absolute right-0 top-0 p-10'>
       <SocialLinks client:load />
     </aside>
+
+    <div class='h-[100px]'>Holiws</div>
+
+    <Footer client:only='react'>
+      <ReactFlowLoader
+        snapshotName='footer'
+        flowClassName='!overflow-visible'
+        showBackground={false}
+        showControls={false}
+        flowProps={{
+          preventScrolling: false,
+          panOnDrag: false,
+          fitViewOptions: { padding: 0.2 },
+          nodesDraggable: true,
+          autoPanOnNodeDrag: false,
+        }}
+      />
+    </Footer>
   </main>
 </Layout>
