--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import { Footer } from '@/components/Footer'
 import { Hero } from '@/components/Hero'
 import ReactFlowLoader from '@/components/ReactFlowLoader.astro'
-import { SocialLinks } from '@/components/SocialLinks'
+import SocialLinks from '@/components/SocialLinks'
 import Layout from '@/layouts/Layout.astro'
 
 const searchParams = Astro.url.searchParams
