--- a/src/components/ReactFlowLoader.astro
+++ b/src/components/ReactFlowLoader.astro
@@ -3,15 +3,13 @@ import type { FlowLikesDTO, SnapshotDTO } from '@/lib/db/dto/reactflow.dto'
 import { isValidApiKey } from '@/pages/_services/admin.service'
 import { GET as getFlowSnapshot } from '@/pages/api/reactflow/[snapshot]'
 import { GET as getFlowLikes } from '@/pages/api/reactflow/[snapshot]/likes'
-import { ReactFlowCanvas, type BaseReactFlowCanvasProps } from './ReactFlow'
+import { ReactFlow, type ReactFlowProps } from './ReactFlow'
 
-type Props = Omit<BaseReactFlowCanvasProps, 'flowLikes'> & {
+type Props = Omit<ReactFlowProps, 'flowLikes' | 'snapshot' | 'allowEditing'> & {
   snapshotName: string
 }
 
-const { snapshotName } = Astro.props
-
-Astro.params.snapshot = snapshotName
+Astro.params.snapshot = Astro.props.snapshotName
 
 const snapshotRes = await getFlowSnapshot(Astro)
 if (!snapshotRes.ok) return new Response('Not Found', { status: 404 })
@@ -23,7 +21,7 @@ const flowLikes: FlowLikesDTO = await flowLikesRes.json()
 const allowEditing = isValidApiKey(Astro.cookies)
 ---
 
-<ReactFlowCanvas
+<ReactFlow
   client:load
   snapshot={snapshot}
   flowLikes={flowLikes}
