fix(reactflow): temporal mobile layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,8 @@ const initQuery = searchParams.get('q') ?? ''
         flowProps={{
           preventScrolling: false,
           autoPanOnNodeDrag: false,
+          minZoom: 0.5,
+          maxZoom: 1,
         }}
       />
     </Footer>
