--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import { Hero } from '@/components/Hero'
 import ReactFlowLoader from '@/components/ReactFlowLoader.astro'
 import SocialLinks from '@/components/SocialLinks'
 import Layout from '@/layouts/Layout.astro'
+import { t } from 'astro-i18n'
 
 const searchParams = Astro.url.searchParams
 const initQuery = searchParams.get('q') ?? ''
@@ -18,7 +19,7 @@ const initQuery = searchParams.get('q') ?? ''
       <SocialLinks client:load />
     </aside>
 
-    <div class='h-[100px]'>Holiws</div>
+    <div class='h-[100px]'>{t('hello')}</div>
 
     <Footer client:only='react'>
       <ReactFlowLoader
