chore(cleanup): run linter/prettier

--- a/src/components/LightsBackground.astro
+++ b/src/components/LightsBackground.astro
@@ -1,11 +1,11 @@
 <div
-	class='mix-blend-screen blur-sm fixed size-full -scale-100 bg-no-repeat opacity-10 md:opacity-100'
+  class='fixed size-full -scale-100 bg-no-repeat opacity-10 mix-blend-screen blur-sm md:opacity-100'
 >
 </div>
 
 <style>
-	div {
-		background: url('/imgs/effects/background.webp');
-		background-size: cover;
-	}
+  div {
+    background: url('/imgs/effects/background.webp');
+    background-size: cover;
+  }
 </style>
