chore(i18n): add translations across app

--- a/src/components/ReactFlowLoader.astro
+++ b/src/components/ReactFlowLoader.astro
@@ -22,7 +22,7 @@ const allowEditing = isValidApiKey(Astro.cookies)
 ---
 
 <ReactFlow
-  client:load
+  client:visible
   snapshot={snapshot}
   flowLikes={flowLikes}
   allowEditing={allowEditing}
