--- a/src/layouts/SnapshotLayout.astro
+++ b/src/layouts/SnapshotLayout.astro
@@ -10,7 +10,7 @@ type Props = {
 const { snapshotName } = Astro.props
 ---
 
-<Layout title={snapshotName}>
+<Layout>
   <main class='h-dvh'>
     <ReactFlowLoader snapshotName={snapshotName} />
   </main>
