--- a/src/pages/jobs/[id].astro
+++ b/src/pages/jobs/[id].astro
@@ -11,7 +11,7 @@ const node: Node = await nodeRes.json()
 ---
 
 <Layout>
-  <TitleName client:load />
+  <TitleName client:visible />
   <div class='p-12'>
     <JobNodeContent {...node.data} nodeId={node.id} />
   </div>
