--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,16 +10,19 @@ const searchParams = Astro.url.searchParams
 const initQuery = searchParams.get('q') ?? ''
 ---
 
-<Layout title='Iván Ruiz'>
+<Layout>
   <main
     class='flex min-h-dvh flex-col items-center overflow-hidden pt-32 bg-dot-black/20 dark:bg-dot-white/20 lg:pt-40'
   >
-    <Hero client:only='react' initQuery={initQuery} />
+    <Hero client:only='react' initQuery={initQuery}>
+      <div set:html={t('hero.about_me.description')} />
+    </Hero>
+
     <aside class='absolute right-0 top-0 p-10'>
       <SocialLinks client:load />
     </aside>
 
-    <div class='h-[100px]'>{t('hello')}</div>
+    <div class='h-[300px]'></div>
 
     <Footer client:only='react'>
       <ReactFlowLoader
