chore(routing): change routes and admin key until invalid url is fixed

--- a/src/pages/es/admin/[key]/index.astro
+++ b/src/pages/es/admin/[key]/index.astro
@@ -1,5 +1,5 @@
 ---
-import Page from '../../../../[snapshot]/admin/[...key].astro'
+import Page from '../../../admin/[key]/index.astro'
 export const prerender = false
 const { props } = Astro
 ---
