--- a/src/pages/admin/[key]/index.astro
+++ b/src/pages/admin/[key]/index.astro
@@ -1,9 +1,8 @@
 ---
 import { clearApiKey, setApiKey } from '@/pages/_services/admin.service'
-import { astroI18n } from 'astro-i18n'
 
 const apiKey = Astro.params.key
 apiKey ? setApiKey(Astro.cookies, apiKey) : clearApiKey(Astro.cookies)
 
-astroI18n.redirect('/' + Astro.params.snapshot, 302)
+return Astro.redirect('/', 301)
 ---
