--- a/src/pages/es/trabajos/[id]/index.astro
+++ b/src/pages/es/trabajos/[id]/index.astro
@@ -1,5 +1,5 @@
 ---
-import Page from '../../../jobs/[id].astro'
+import Page from '../../../jobs/[id]/index.astro'
 export const prerender = false
 const { props } = Astro
 ---
