feat(reactflow): add node rotation

--- a/src/pages/es/educacion/index.astro
+++ b/src/pages/es/educacion/index.astro
@@ -1,7 +1,6 @@
 ---
-import Page from '../../education/index.astro'
+import Page from "../../education/index.astro"
 export const prerender = false
 const { props } = Astro
 ---
-
 <Page {...props} />
