--- a/src/pages/es/trabajos/[id]/index.astro
+++ b/src/pages/es/trabajos/[id]/index.astro
@@ -1,7 +1,6 @@
 ---
-import Page from '../../../jobs/[id]/index.astro'
+import Page from "../../../jobs/[id]/index.astro"
 export const prerender = false
 const { props } = Astro
 ---
-
 <Page {...props} />
