--- a/src/pages/es/admin/[key]/index.astro
+++ b/src/pages/es/admin/[key]/index.astro
@@ -1,7 +1,6 @@
 ---
-import Page from '../../../admin/[key]/index.astro'
+import Page from "../../../admin/[key]/index.astro"
 export const prerender = false
 const { props } = Astro
 ---
-
 <Page {...props} />
