--- a/src/pages/es/trabajos/index.astro
+++ b/src/pages/es/trabajos/index.astro
@@ -1,7 +1,6 @@
 ---
-import Page from '../../jobs/index.astro'
+import Page from "../../jobs/index.astro"
 export const prerender = false
 const { props } = Astro
 ---
-
 <Page {...props} />
