feat: add footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,7 @@ const initQuery = searchParams.get('q') ?? ''
           autoPanOnNodeDrag: false,
           minZoom: 0.5,
           maxZoom: 1,
+          fitViewOptions: { padding: 0 },
         }}
       />
     </Footer>
