--- a/src/pages/es/trabajos/[slug]/index.astro
+++ b/src/pages/es/trabajos/[slug]/index.astro
@@ -1,5 +1,5 @@
 ---
-import Page from "../../../jobs/[id]/index.astro"
+import Page from "../../../jobs/[slug]/index.astro"
 export const prerender = false
 const { props } = Astro
 ---
