--- a/src/components/ReactFlow/FlowCanvas/style.module.css
+++ b/src/components/ReactFlow/FlowCanvas/style.module.css
@@ -4,8 +4,8 @@
   }
 
   .react-flow__controls-button {
-    border: inherit;
-    @apply border border-foreground-400 bg-background text-foreground drop-shadow-sm transition-colors duration-200;
+    border: none;
+    @apply bg-background text-foreground drop-shadow-sm transition-colors duration-200;
   }
 
   .react-flow__controls-button:hover {
