--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title, description } = Astro.props
 const theme = getTheme(Astro.cookies)
 ---
 
-<html lang='en' class={theme}>
+<html lang='en' data-theme={theme}>
   <head>
     <meta charset='utf-8' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
