--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,8 @@ const theme = getTheme(Astro.cookies)
   >
     <slot />
 
+    {JSON.stringify(Astro.cookies.get('theme'))}
+
     <span class='absolute left-0 top-0 flex items-start gap-2 p-10'>
       <ThemeToggle client:only='react' initialTheme={theme} />
     </span>
